[package]
name = "sndstr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures-util = "0.3.26"
log = "0.4.17"
nostr = "0.18.1"
salvo = { version = "0.37.9", features = ["full", "ws", "compression", "logging", "size-limiter", "timeout", "trailing-slash", "rustls"] }
tokio = { version = "1", features = ["macros"] }
rustls = "0.20.8"
thiserror = "1.0.38"
serde = "1.0.152"
serde_json = "1.0.92"
sailfish = "0.6.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.69"
